<resources>
    <string name="app_name">SDUR</string>
    <string name="app_fullname">Stockholms Dövas Ungdomsråd</string>
    <string name="background_image">Bakgrundsbild på SDURs logga</string>
    <string name="action_settings">SETTINGS</string>
    <string name="mainmenu_about">Om...</string>
    <string name="mainmenu_removeimage">Bakgrundsbild</string>
    <string name="about_developer"><b>Utvecklare:</b> David Öhman, 2018</string>
    <string name="about_homepage">Kolla gärna in på vår hemsida:</string>
    <string name="about_homepageurl"><u>https://www.sdur.se</u></string>
    <string name="about_contactus">Tveka inte att kontakta oss!</string>
    <string name="toast_notfoundbrowser">Kunde inte hitta någon webbläsare-app</string>
    <string name="toast_notfoundemail">Kunde inte hitta någon email-app</string>
    <string name="choose_emailclient">Välj din klient...</string>
    <string name="tutorial_welcome">Välkommen!</string>
    <string name="tutorial_message">Kul att du har valt att använda våran app! Innan du sätter igång vill vi berätta lite om hur appen funkar.
                                    Fliken Events styrs av en databas i realtid, d.v.s. uppdateras listan automatiskt. När du klickar på en event kommer du
                                    till dess Facebookssida där du kan anmäla dig till eventen.\n\nOm du tycker bakgrundsbilden är störande kan du klicka
                                    på knappen som föreställer ett öga för att enkelt stänga av den.
                                    Klickar du på knappen bredvid kommer du till våra kontaktuppgifter och sociala medier.\n\nSkulle du ha något önskemål
                                    angående appen, tveka inte med att kontakta oss! Lycka till!</string>
    <string name="tutorial_thanks">Tackar!</string>

    <string name="tab_text_1">BLI MEDLEM</string>
    <string name="hinttext_name">ex. Pelle Pelikansson</string>
    <string name="text_memberCheck">Här kan du bli medlem hos oss! När du fyllt i alla fält kommer du till Swish-appen där du betalar
        för medlemskapet. Det kan ta ett par dagar tills du är helt registrerad som medlem! Tack för ditt engagemang!</string>
    <string name="button_memberCheck">Kontrollera</string>
    <string name="text_forename">Förnamn</string>
    <string name="hint_forename">ex. Pelle</string>
    <string name="text_surname">Efternamn</string>
    <string name="hint_surname">ex. Pelikansson</string>
    <string name="text_gender">Kön</string>
    <string name="gender_man">Man</string>
    <string name="gender_woman">Kvinna</string>
    <string name="gender_intergender">Icke-binär</string>
    <string name="text_identitynumber">Personnummer</string>
    <string name="hint_identitynumber">ex. 19370614-0123</string>
    <string name="text_streetaddress">Gatuadress</string>
    <string name="hint_streetaddress">ex. Palmfeltsvägen 13</string>
    <string name="text_postcode">Postnummer</string>
    <string name="hint_postcode">ex. 121 62</string>
    <string name="text_city">Bostadsort</string>
    <string name="hint_city">ex. Johanneshov</string>
    <string name="text_phonenumber">Mobilnummer</string>
    <string name="hint_phonenumber">ex. 0735012345</string>
    <string name="text_email">Email</string>
    <string name="hint_email">ex. pellepelikan@sdur.se</string>
    <string name="button_sendinformation">SKICKA UPPGIFTERNA</string>
    <string name="toast_incorrect_identitynumber">Personnumret är inkorrekt</string>
    <string name="toast_notAllFieldsAreFilled">Du har inte fyllt i allt</string>
    <string name="toast_incorrect_email">Emailadressen är inkorrekt</string>
    <string name="toast_incorrect_phone">Mobilnumret är inkorrekt</string>
    <string name="toast_incorrect_postcode">Postkoden är inkorrekt</string>
    <string name="alert_title">Kontrollera uppgifterna!</string>
    <string name="alert_cancel">TILLBAKA</string>
    <string name="alert_ok">ALLT ÄR KORREKT</string>
    <string name="alert_forename"><b>Förnamn:</b>\u0020</string>
    <string name="alert_surname"><b>Efternamn:</b>\u0020</string>
    <string name="alert_gender"><b>Kön:</b>\u0020</string>
    <string name="alert_identitynumber"><b>Personnummer:</b>\u0020</string>
    <string name="alert_streetaddress"><b>Gatuadress:</b>\u0020</string>
    <string name="alert_postcode"><b>Postkod:</b>\u0020</string>
    <string name="alert_city"><b>Bostadsort:</b>\u0020</string>
    <string name="alert_phonenumber"><b>Mobilnummer:</b>\u0020</string>
    <string name="alert_email"><b>Email:</b>\u0020</string>
    <string name="pdialog_sending_message">Skickar...</string>
    <string name="pdialog_pleasewait">Vänligen vänta</string>
    <string name="toast_messagesent">Formuläret skickat!</string>
    <string name="sendemail_subject">NY MEDLEM!</string>
    <string name="toast_alreadysent">Du har redan skickat in formuläret!\nKontakta oss vid problem.</string>

    <string name="tab_text_2">EVENTS</string>
    <string name="toast_nolink">Ingen länk finnes för eventen</string>

    <string name="tab_text_3">TEMA</string>
    <string name="header_du_bestammer">DU BESTÄMMER!</string>
    <string name="text_du_bestammer">Det är DU som medlem som bestämmer över SDUR, något som många glömt.
        Därför är vårt tema under 2018 ”DU BESTÄMMER”, det innebär att du som medlem kan komma med idéer
        eller önskemål på aktiviteter så ser vi till att uppfylla dina önskemål! Klicka på denna ruta för att
        komma till Facebookssidan!</string>
    <string name="toast_facebook">Tar dig till Facebook...</string>
</resources>
